--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/typography": "^0.4.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
